# -CPP2024-GEMS

./: .gitignore  CMakeLists.txt  GEMS.cpp  GEMS.sln  GEMS.vcxproj  GEMS.vcxproj.filters  GameField.cpp  GameField.h  GameObjects.h  GameRenderer.cpp  IRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Source.cpp  Window.cpp
include/: GameField.h  GameObjects.h  GameRenderer.h  Shader.h  Window.h
shaders/: default.frag
